css/flappy.css
*{
    box-sizing: border-box;
    font-family: 'Oswald', sans-serif;
}

@font-face{
    font-family: "Pixel";
    src: url('../fonts/Pixel.ttf');
}

@font-face {
    font-family: 'Oswald';
    src: url('../fonts/Oswald-Regular.ttf') format('truetype');
}

html {
    height: 100%;
}


body {
    margin: 0;
    background-color: #0D262D;
    color: #fff;
    height: 100%;
}

.conteudo {
    display: flex;
    flex-direction: column;
    align-items: center;
    min-height: 100%;
}


[wm-flappy]{
    position: relative;
    border: 5px solid dodgerblue;
height: 700px;
width: 1200px;
margin: 15px;
background-color: deepskyblue;
overflow: hidden;
}


.passaro{
    position: absolute;
    width: 60px;
    left: calc(50% - 30px);
    -ms-transform: rotate(10deg); /* IE 9 */
    transform: rotate(10deg);
    
}

.passaro-voando{
    position: absolute;
    width: 60px;
    left: calc(50% - 30px);
    
    -ms-transform: rotate(-10deg); /* IE 9 */
    transform: rotate(-10deg);
}

.par-de-barreiras{
    position: absolute;
    top: 0;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}


.barreira{
    display: flex;
    flex-direction: column;
    align-items: center;
}

.barreira .borda{
    height: 30px;
    width: 130px;
    background:linear-gradient(90deg, #639301, #A5E82E);
    border:2px solid #000;

}

.barreira .corpo{
    height: 150px;
    width: 110px;
    background: linear-gradient(90deg, #639301, #A5E82E);
    border-left: 2px solid #000;
    border-right: 2px solid #000;

}

.progresso{
    position: absolute;
    top: 10px;
    right: 10px;
    font-family: Pixel;
    font-size: 70px;
    z-index: 10;
}

.msg{

    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    
}

.msg h1{
    font-size: 80px;
    font-weight: 900;
    z-index: 10;
    text-shadow: 4px 4px #000;
    
}

